src/styles/style.scss
$main-color: darkred;
$secondary-color: white;
$secondary-color-2: black;
$title-font: "Source Code Pro", monospace;
$body-font: "DM Sans", sans-serif;

%flex-column-center {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

%flex-column-center-align {
  display: flex;
  flex-direction: column;
  align-items: center;
}

:root {
  box-sizing: border-box;
}

body,
html {
  margin: 0;
  padding: 0;
  height: 100vh;
}

#root {
  height: 100vh;
}

.App {
  height: 100vh;
}

a {
  text-decoration: none;
  color: $secondary-color;
}

a:hover {
  color: $secondary-color-2;
}

img {
  height: 16.25rem;
  width: 16.25rem;
}

.home {
  @extend %flex-column-center;
  background-image: url(../images/red-beach.png);
  background-size: cover;
  height: 100%;
  width: 100%;
  position: fixed;
  overflow: hidden;
}

.home-main {
  @extend %flex-column-center;
  align-items: center;
  margin-bottom: 10vh;
  font-family: $title-font;
}

.hero-title {
  font-size: 4rem;
  background-color: rgb(0, 0, 0, 0.5);
  padding: 1.75rem 2rem;
  color: $secondary-color;
  font-weight: bold;
  font-style: italic;
}

.hero-additional {
  font-size: 2rem;
  margin-bottom: 0;
}

.logo:before,
.logo:hover:before {
  content: url(../images/hexagon.png);
  display: inline-block;
  vertical-align: middle;
  margin-right: 0.5rem;
}

.logo:hover:before {
  content: url(../images/hexagon-black.png);
}

nav {
  font-family: $title-font;
  font-weight: 300;
  background-color: $main-color;
  color: $secondary-color;
  padding: 0.2rem;
}

li:hover {
  color: $secondary-color-2;
}

ul {
  list-style: none;
  display: flex;
  justify-content: space-between;
}

.logo-column {
  display: flex;
}

.navigation-column {
  display: flex;
  gap: 1rem;
  margin-right: 0.5rem;
}

.product-listing {
  background-image: url("../images/tinted-orange.jpg");
  background-size: cover;
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

.checkout-page,
.product-detail-page,
.thank-you-page {
  background-image: url("../images/tinted-orange.jpg");
  background-size: cover;
  min-height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

.product-cards-container,
.checkout-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1.8rem 2.5rem;
  margin: 2rem 2.75rem;
  margin-top: 1.5rem;
  padding: 1.25rem 2.5rem;
  font-family: $body-font;
}

.checkout-and-title,
.product-and-title,
.product-detail,
.thank-you-container {
  background-color: rgb(227, 227, 227, 0.5);
  min-width: 80%;
  max-width: 50rem;
  margin: 1.5rem;
  position: relative;
}

.thank-you {
  margin-top: 10%;
}

.thank-you-container {
  max-height: 31.25rem;
}

.product-card {
  border-color: #d8d3d3;
  border-width: 2px;
  border-style: solid;
  border-bottom: none;
}

.product-card:hover {
  border-color: $main-color;
}

.product-title,
.checkout-title {
  font-weight: bold;
  color: $secondary-color-2;
}

.product-title:hover,
.checkout-title:hover {
  color: $secondary-color;
}

.product-image {
  padding: 0.188rem 0.188rem 0 0.188rem;
}

.product-info {
  margin-top: 0.313rem;
  margin-left: 0.188rem;
}

.product-price {
  font-style: italic;
}

.product-bottom {
  width: 100%;
  height: 0.625rem;
  margin-top: 1rem;
  background-color: $main-color;
}

.page-title {
  margin-bottom: 0;
  font-family: $title-font;
  text-align: center;
  font-size: 2.4rem;
}

.underline {
  text-decoration: underline;
}

.back-button {
  margin-right: auto;
  margin-top: 1rem;
  margin-left: 1.5rem;
  background-color: $secondary-color-2;
  color: $secondary-color;
  padding: 0.2em 1em;
  border: 1px solid black;
  outline: none;
  cursor: pointer;
}

.detail-title {
  font-family: $title-font;
  text-align: center;
}

.detail-info {
  font-family: $body-font;
  max-width: 50%;
  position: relative;
}

.product-detail {
  @extend %flex-column-center-align;
}

.product-detail,
.checkout-and-title,
.thank-you-container {
  padding-bottom: 10%;
}

.checkout-button {
  background-color: $secondary-color-2;
  color: $secondary-color;
  padding: 0.4em 2em;
  border: none;
  outline: none;
  cursor: pointer;
  border: 1px solid black;
}

.checkout-button:hover {
  background-color: transparent;
  color: $secondary-color-2;
}

.back-button:hover {
  background-color: transparent;
  color: $secondary-color-2;
}

.detail-image {
  border: 1px solid black;
}

.button-container {
  display: flex;
  justify-content: flex-end;
}

.button-header {
  width: 100%;
}

.cart-icon {
  height: 2.8rem;
  width: 2.8rem;
  margin-top: auto;
  margin-right: 0.8rem;
}

.icon-header {
  align-items: center;
  display: flex;
  justify-content: center;
}

.checkout-item {
  display: flex;
  gap: 1rem;
  border: 1px solid black;
  min-width: 60%;
}

.checkout-image {
  width: 10.625rem;
  height: 10.625rem;
}

.checkout-title {
  max-width: 12.5rem;
}

.checkout-info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.checkout-description {
  margin-top: 1rem;
}

.checkout-container {
  @extend %flex-column-center-align;
}

.modify-quantity {
  margin-right: 1.5rem;
  font-size: 1.2rem;
}

.modify-quantity:hover {
  color: rgb(192, 0, 0);
  cursor: pointer;
}

.remove-item {
  font-weight: 400;
  margin-bottom: 3%;
}

.remove-item:hover {
  color: red;
  text-decoration: underline;
  cursor: pointer;
}

.checkout-total {
  font-size: 1.5rem;
  text-align: center;
  margin-left: 18rem;
}

.checkout-button {
  margin-top: 1rem;
}

.item-added {
  margin-left: auto;
  position: absolute;
  left: 100%;
  bottom: 30%;
  border: 1px solid black;
  background-color: rgb(38, 112, 48);
  color: $secondary-color;
  line-height: 1;
  text-align: center;
  padding: 1rem;
  display: none;
}

.item-added[fade="1"] {
  display: block;
  animation: fade 2s linear forwards;
}

@keyframes fade {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@media (max-width: 1000px) {
  .checkout-item {
    min-width: 100%;
  }

  .hero-title {
    text-align: center;
  }
}

@media (max-width: 500px) {
  .checkout-description,
  .remove-item {
    margin-left: 0.5rem;
    margin-top: 0.2rem;
  }

  .page-title {
    font-size: 1.6rem;
  }

  .checkout-item {
    min-width: 90%;
    flex-direction: column;
  }

  .checkout-image {
    width: 13rem;
    height: 13rem;
  }

  .checkout-total {
    margin-left: 10rem;
  }

  .hero-title {
    font-size: 3rem;
    padding: 0.875rem 1rem;
  }
}

@media (max-width: 350px) {
  .item-added {
    left: 90%;
  }

  .product-and-title,
  .product-detail {
    margin: 1rem;
  }

  .checkout-image {
    height: 10rem;
    width: 10rem;
  }
}

